--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -65,7 +65,7 @@
                   <p class="mil-light-soft mil-mb-10">Phone:</p>
                   <p class="mil-sm mil-mb-30">+7 (200) 600-30-30</p>
                   <p class="mil-light-soft mil-mb-10">Email:</p>
-                  <p class="mil-sm mil-mb-30">info@ashley.com</p>
+                  <p class="mil-sm mil-mb-30">info@soho.com</p>
                   <div class="mil-social-frame">
                     <h6 class="mil-muted mil-mb-30">Social</h6>
                     <a href="#." class="mil-social-btn mil-mb-30">
