--- a/public/css/style_v.1.css
+++ b/public/css/style_v.1.css
@@ -1464,7 +1464,7 @@ menu
 }
 @media screen and (max-width: 1200px) {
   .mil-menu-frame .mil-menu-right-frame {
-    display: none;
+    display: block;
   }
 }
 @media screen and (max-height: 800px) {
