--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,21 +123,21 @@ import BaseLayout from '../layouts/BaseLayout.astro';
               <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
                 <a href="/service/website-design-and-development" class="mil-service-card-sm mil-up">
                   <h5 class="mil-muted mil-mb-30">Website Design <br>and Development</h5>
-                  <p class="mil-light-soft mil-mb-30">Website modern, cepat, dan dirancang untuk mendorong performa serta konversi bisnis.</p>
+                  <div class="mil-light-soft mil-mb-30">Website modern, cepat, dan dirancang untuk mendorong performa serta konversi bisnis.</div>
                   <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                 </a>
               </div>
               <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
                 <a href="/service/custom-software-development" class="mil-service-card-sm mil-up">
                   <h5 class="mil-muted mil-mb-30">Custom Software <br>Development</h5>
-                  <p class="mil-light-soft mil-mb-30">Perangkat lunak khusus untuk meningkatkan efisiensi dan keunggulan operasional.</p>
+                  <div class="mil-light-soft mil-mb-30">Perangkat lunak khusus untuk meningkatkan efisiensi dan keunggulan operasional.</div>
                   <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                 </a>
               </div>
               <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
                 <a href="/service/it-consultation" class="mil-service-card-sm mil-up">
                   <h5 class="mil-muted mil-mb-30">IT Consultation</h5>
-                  <p class="mil-light-soft mil-mb-30">Konsultasi strategis untuk membantu bisnis beradaptasi dan berkembang melalui teknologi.</p>
+                  <div class="mil-light-soft mil-mb-30">Konsultasi strategis untuk membantu bisnis beradaptasi dan berkembang melalui teknologi.</div>
                   <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                 </a>
               </div>
