--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,10 +58,10 @@
 
               <div class="row justify-content-between">
 
-                <div>
-                  <p class="mil-light-soft mil-up"><a href="https://wa.me/62811979362" class="mil-light" data-no-swup>+62 811-979-362</a></p>
-                  <p class="mil-light-soft mil-up"><a href="mailto:business@sohodigital.id" class="mil-light">business@sohodigital.id</a></p>
-                  <p class="mil-light-soft mil-up">
+                <div style="font-size: 20px;">
+                  <p style="font-size: 20px;" class="mil-light-soft mil-up"><a href="https://wa.me/62811979362" class="mil-light">+62 811-979-362</a></p>
+                  <p style="font-size: 20px;" class="mil-light-soft mil-up"><a href="mailto:business@sohodigital.id" class="mil-light">business@sohodigital.id</a></p>
+                  <p style="font-size: 20px;" class="mil-light-soft mil-up">
                       <br/>Podomoro city ruko gsa 8dh, jalan Letjen S. Parman
                       <br/>015/005, Tanjung Duren Selatan, Grogol
                       <br/>Petamburan, kota Adm. Jakarta Barat
@@ -90,7 +90,7 @@
               </ul>
             </div> -->
             <hr style="border-color: gray;"/>
-            <p class="mil-light-soft mil-up mt-3" style="text-align: center;">© Copyright 2025 - Soho Solusi Digital All Rights Reserved.</p>
+            <p class="mil-light-soft mil-up mt-3" style="text-align: center;font-size: 20px;">© Copyright 2025 - Soho Solusi Digital All Rights Reserved.</p>
           </div>
 
         </div>
