--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,8 @@ import BaseLayout from '../layouts/BaseLayout.astro';
               <div class="mil-banner-content mil-up">
                 <h1 class="mil-muted mil-mb-60" style="backdrop-filter: blur(1px);">Empowering <span class="mil-thin">Businesses</span><br> Through <span class="mil-thin">Smart Solutions</span></h1>
                 <div class="row">
-                  <div class="col-md-7 col-lg-5">
-                    <p class="mil-light mil-mb-60" style="backdrop-filter: blur(1px);">Kami percaya bahwa setiap tantangan memiliki solusi dan teknologi adalah jembatannya.
+                  <div class="col-md-7 col-lg-7">
+                    <p class="mil-light mil-mb-60" style="backdrop-filter: blur(1px); font-size: 24px;">Kami percaya bahwa setiap tantangan memiliki solusi dan teknologi adalah jembatannya.
                         Dengan pendekatan yang cerdas dan inovatif, kami membantu bisnis Anda menemukan cara terbaik untuk tumbuh, beradaptasi, dan berkembang di era digital.</p>
                   </div>
                 </div>
@@ -66,20 +66,21 @@ import BaseLayout from '../layouts/BaseLayout.astro';
       <section id="about">
         <div class="container mil-p-120-30">
           <div class="row justify-content-between align-items-center">
-            <div class="col-lg-6 col-xl-5">
+            <div class="col-lg-7 col-xl-7">
 
               <div class="mil-mb-90">
                 <h2 class="mil-up mil-mb-60">Discover <br>Our <span class="mil-thin">Solutions</span></h2>
-                <p class="mil-up mil-mb-30">Kami percaya bahwa setiap tantangan ada solusinya, dan teknologi adalah jembatannya. Dengan pendekatan yang cerdas dan inovatif, kami membantu bisnis Anda menemukan solusi praktis terbaik untuk beradaptasi, tumbuh, dan berkembang berkelanjutan di era digital.</p>
-                <p class="mil-up mil-mb-60">Kolaborasi adalah inti dari cara kami bekerja. Tim kami yang terdiri dari para pengembang, desainer, dan konsultan teknologi bekerja secara sinergis untuk menghadirkan hasil yang berfungsi dengan baik, serta selaras dengan visi bisnis Anda. Dengan pendekatan yang berorientasi pada solusi, kami berkomitmen menghadirkan inovasi yang relevan, dan siap bersaing di masa depan digital.</p>
+                <p class="mil-up mil-mb-30" style="color: #1A1A1A;font-size: 20px;text-align: justify;">Kami percaya bahwa setiap tantangan ada solusinya, dan teknologi adalah jembatannya. Dengan pendekatan yang cerdas dan inovatif, kami membantu bisnis Anda menemukan solusi praktis terbaik untuk beradaptasi, tumbuh, dan berkembang berkelanjutan di era digital.</p>
+                <p class="mil-up mil-mb-60"  style="color: #1A1A1A;font-size: 20px;text-align: justify;">Kolaborasi adalah inti dari cara kami bekerja. Tim kami yang terdiri dari para pengembang, desainer, dan konsultan teknologi bekerja secara sinergis untuk menghadirkan hasil yang berfungsi dengan baik, serta selaras dengan visi bisnis Anda. Dengan pendekatan yang berorientasi pada solusi, kami berkomitmen menghadirkan inovasi yang relevan, dan siap bersaing di masa depan digital.</p>
 
                 <div class="mil-about-quote">
-                  <h6 class="mil-quote mil-up" style="padding: 0px;">Creating <span class="mil-thin">Digital Solutions:</span> Unleashing <span class="mil-thin">Innovation & Growth</span></h6>
+                  <h6 class="mil-quote mil-up" style="padding: 0px; font-size: 24px!important;">
+                    Creating <span class="mil-thin">Digital Solutions:</span> <br/> Unleashing <span class="mil-thin">Innovation & Growth</span></h6>
                 </div>
               </div>
 
             </div>
-            <div class="col-lg-5 d-none d-lg-block">
+            <div class="col-lg-4 d-none d-lg-block">
               <div class="mil-about-photo mil-mb-90">
                 <!-- <div class="mil-lines-place"></div> -->
                 <div class="mil-up mil-img-frame" style="padding-bottom: 160%;">
@@ -122,22 +123,22 @@ import BaseLayout from '../layouts/BaseLayout.astro';
             <div class="row mil-services-grid m-0">
               <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
                 <a href="/service/website-design-and-development" class="mil-service-card-sm mil-up">
-                  <h5 class="mil-muted mil-mb-30">Website Design <br>and Development</h5>
-                  <div class="mil-light-soft mil-mb-30">Website modern, cepat, dan dirancang untuk mendorong performa serta konversi bisnis.</div>
+                  <h4 class="mil-muted mil-mb-30">Website Design <br>and Development</h4>
+                  <div class="mil-light-soft mil-mb-30" style="font-size: 20px;">Website modern, cepat, dan dirancang untuk mendorong performa serta konversi bisnis.</div>
                   <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                 </a>
               </div>
               <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
                 <a href="/service/custom-software-development" class="mil-service-card-sm mil-up">
-                  <h5 class="mil-muted mil-mb-30">Custom Software <br>Development</h5>
-                  <div class="mil-light-soft mil-mb-30">Perangkat lunak khusus untuk meningkatkan efisiensi dan keunggulan operasional.</div>
+                  <h4 class="mil-muted mil-mb-30">Custom Software <br>Development</h4>
+                  <div class="mil-light-soft mil-mb-30"  style="font-size: 20px;">Perangkat lunak khusus untuk meningkatkan efisiensi dan keunggulan operasional.</div>
                   <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                 </a>
               </div>
               <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
                 <a href="/service/it-consultation" class="mil-service-card-sm mil-up">
-                  <h5 class="mil-muted mil-mb-30">IT Consultation</h5>
-                  <div class="mil-light-soft mil-mb-30">Konsultasi strategis untuk membantu bisnis beradaptasi dan berkembang melalui teknologi.</div>
+                  <h4 class="mil-muted mil-mb-30">IT<br/>Consultation</h4>
+                  <div class="mil-light-soft mil-mb-30" style="font-size: 20px;margin-top: auto;">Konsultasi strategis untuk membantu bisnis beradaptasi dan berkembang melalui teknologi.</div>
                   <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                 </a>
               </div>
