--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,7 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 <BaseLayout title="Works | Soho Solusi Digital" description="Explore our portfolio showcasing innovative solutions and successful projects that demonstrate our expertise in web design, custom software development, and IT consultation.">
   <!-- content -->
   <div class="mil-content">
-    <div id="swupMain" class="mil-main-transition">
+    <div class="mil-main-transition">
 
       <!-- banner -->
       <div class="mil-inner-banner">
@@ -36,7 +36,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
           <div class="row justify-content-between align-items-center">
             <div class="col-lg-5">
-              <a href="/work/sercova/" class="mil-portfolio-item mil-mb-60">
+              <a id="sercova" href="/work/sercova" class="mil-portfolio-item mil-mb-60">
                 <div class="mil-cover-frame mil-vert mil-up"  style="padding-bottom: 72%;">
                   <div class="mil-cover">
                     <video src="/img/works/sercova/IMG_0699.MP4" autoplay loop muted playsinline width="100%" height="auto"></video>
