--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -26,10 +26,10 @@
               </li>
               <li class={Astro.url.pathname.startsWith('/service') || Astro.url.pathname.startsWith('/services') ? 'mil-has-children mil-active' : 'mil-has-children'}>
                 <a href="#.">Services</a>
-                <ul>
-                  <li><a href="/service/website-design-and-development/">Website design and development</a></li>
-                  <li><a href="/service/custom-software-development/">Custom software development</a></li>
-                  <li><a href="/service/it-consultation/">IT Consultation</a></li>
+                <ul style="font-size: 16px;">
+                  <li><a style="font-size: 16px;" href="/service/website-design-and-development/">Website design and development</a></li>
+                  <li><a style="font-size: 16px;" href="/service/custom-software-development/">Custom software development</a></li>
+                  <li><a style="font-size: 16px;" href="/service/it-consultation/">IT Consultation</a></li>
                 </ul>
               </li>
               <li class={Astro.url.pathname.startsWith('/works') || Astro.url.pathname.startsWith('/work') ? 'mil-active' : ''}>
@@ -53,9 +53,9 @@
                   <div class="row">
                       <div class="col-lg-7 mil-mb-60">
 
-                          <h6 class="mil-muted mil-mb-30">Projects</h6>
+                          <h6 class="mil-muted mil-mb-30" style="font-size: 24px;">Projects</h6>
 
-                          <ul class="mil-menu-list">
+                          <ul class="mil-menu-list" style="font-size: 20px;">
                               <li><a href="/work/sercova" class="mil-light-soft">Sercova</a></li>
                               <li></li>
                               <li></li>
@@ -64,9 +64,9 @@
                       </div>
                       <div class="col-lg-5 mil-mb-60">
 
-                          <h6 class="mil-muted mil-mb-30">Social Media</h6>
+                          <h6 class="mil-muted mil-mb-30" style="font-size: 24px;">Social Media</h6>
 
-                          <ul class="mil-menu-list">
+                          <ul class="mil-menu-list" style="font-size: 20px;">
                               <li><a href="https://www.instagram.com/sohosolusidigital" class="mil-light-soft">Instagram</a></li>
                               <li><a href="https://www.linkedin.com/in/soho-solusi-digital" class="mil-light-soft">LinkedIn</a></li>
                               <li><a href="mailto:business@sohodigital.id" class="mil-light-soft">Email</a></li>
@@ -80,9 +80,9 @@
 
                       <div class="mil-mb-60">
 
-                          <h6 class="mil-muted mil-mb-30">Office</h6>
+                          <h6 class="mil-muted mil-mb-30" style="font-size: 24px;">Office</h6>
 
-                          <p class="mil-light-soft">
+                          <p class="mil-light-soft" style="font-size: 20px;">
                               <br/>Podomoro city ruko gsa 8dh, jalan Letjen S. Parman
                               <br/>015/005, Tanjung Duren Selatan, Grogol
                               <br/>Petamburan, kota Adm. Jakarta Barat
