--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -57,7 +57,7 @@
 
                           <ul class="mil-menu-list" style="font-size: 20px;">
                               <li><a href="/work/sercova" class="mil-light-soft">Sercova</a></li>
-                              <li></li>
+                              <li><a href="/work/angkasa-pura-property" class="mil-light-soft">Angkasa Pura Property</a></li>
                               <li></li>
                           </ul>
 
