--- a/src/pages/work/sercova.astro
+++ b/src/pages/work/sercova.astro
@@ -41,7 +41,11 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
           </div>
           
           <div class="row justify-content-between" style="margin-block: 2rem;">
-              <article class="overview-id">
+              <article class="overview-id"  style="line-height: 40px;">
+                <div class="" style="text-align: center;margin-top: 30px;margin-bottom: 50px;">
+                  <img src="/logo/sercova.png" alt="Sercova Logo" width="300" height="auto"/>
+                  <a target="_blank" rel="noopener noreferrer" href="https://sercova.id/en" style="display: block;font-size: 24px">sercova.id</a>
+                </div>
                 <h3 class="mb-2"><strong>Overview</strong></h3>
                 <p class="mil-mb-30" style="font-size: 22px;color: #1A1A1A">
                   <strong>Sercova.id</strong> adalah website resmi untuk inisiatif <em>Seram Climate and Conservation (SERCOVA)</em>,
