--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -35,7 +35,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
           <div class="mil-lines-place mil-lines-long"></div> -->
 
           <div class="row justify-content-between align-items-center">
-            <div class="col-lg-5">
+            <div class="col-lg-6">
               <a id="sercova" href="/work/sercova" class="mil-portfolio-item mil-mb-60">
                 <div class="mil-cover-frame mil-vert mil-up"  style="padding-bottom: 72%;">
                   <div class="mil-cover">
@@ -51,23 +51,23 @@ import BaseLayout from '../layouts/BaseLayout.astro';
                 </div>
               </a>
             </div>
-            <!-- <div class="col-lg-6">
-              <a href="/project-2" class="mil-portfolio-item mil-parallax mil-mb-60" data-value-1="60" data-value-2="-60">
-                <div class="mil-cover-frame mil-hori mil-up">
+            <div class="col-lg-6">
+              <a id="angkasa-pura-property" href="/work/angkasa-pura-property" class="mil-portfolio-item mil-mb-60">
+                <div class="mil-cover-frame mil-vert mil-up"  style="padding-bottom: 72%;">
                   <div class="mil-cover">
-                    <img src="/img/works/2.jpg" alt="cover">
+                    <video src="/img/works/iasp/banner.mp4" autoplay loop muted playsinline width="100%" height="auto"></video>
                   </div>
                 </div>
                 <div class="mil-descr">
                   <div class="mil-labels mil-up mil-mb-15">
-                    <div class="mil-label mil-upper mil-accent">Custom Software Development</div>
-                    <div class="mil-label mil-upper">2025</div>
+                    <div class="mil-label mil-upper mil-accent">Website Design & Development</div>
+                    <!-- <div class="mil-label mil-upper">2025</div> -->
                   </div>
-                  <h4 class="mil-up">Badge & Certificate Administrator</h4>
+                  <h4 class="mil-up">Angkasa Pura Property</h4>
                 </div>
               </a>
             </div>
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
               <a href="/project-3" class="mil-portfolio-item mil-parallax mil-mb-60" data-value-1="60" data-value-2="-60">
                 <div class="mil-cover-frame mil-hori mil-up">
                   <div class="mil-cover">
